[package]
name = "risinglight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.22.0"
thiserror = "1"
rustyline = "9"
env_logger = "0.9.0"
log = "0.4.17"

[dev-dependencies]
sqllogictest = "0.6.4"
test-case = "2.2.1"